fix(validation factory): code changes to parserfactory, streamparser